recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:10: error: identifier expected but ')' found.
  	carre(100.);
                  ^